main/default/objects/Navigator_Item__c/Navigator_Item__c.object-meta.xml
<CustomObject>
    <label>Navigator Item</label>
    <nameField>
        <label>Navigator Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Navigator Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>