main/default/objects/Navigator_Item__c/fields/Expanded_Items__c.field-meta.xml
<CustomField>
    <fullName>Expanded_Items__c</fullName>
    <description>List of options under Navigator Items. Enter each items in a new line.</description>
    <inlineHelpText>List of options under Navigator Items. Enter each items in a new line.</inlineHelpText>
    <label>Expanded Items</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>