main/default/objects/Navigator_Item__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <description>Icon of to be used for the Tab label</description>
    <inlineHelpText>Icon of to be used for the Tab label</inlineHelpText>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>