main/default/objects/Navigator_Item__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Actual text that will be displayed as Tab label in the Navigator.</description>
    <inlineHelpText>Actual text that will be displayed as Tab label in the Navigator.</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>