main/default/objects/Navigator_Item__c/fields/Site_Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Page_Name__c</fullName>
    <description>Actual Site page name which will corresponds to the Navigator tab</description>
    <inlineHelpText>Actual Site page name which will corresponds to the Navigator tab</inlineHelpText>
    <label>Site Page Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>