main/default/objects/Navigator_Item__c/fields/Site_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Site_Page_URL__c</fullName>
    <description>Auto-generated upon insert based on the Site Page Name</description>
    <inlineHelpText>Auto-generated upon insert based on the Site Page Name</inlineHelpText>
    <label>Site Page URL</label>
    <type>Url</type>
</CustomField>