main/default/objects/Navigator_Item__c/fields/SLDS_Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>SLDS_Icon_Name__c</fullName>
    <label>SLDS Icon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>